@@ -2,6 +2,7 @@ unreleased
 ==========
 
 - renamed bluealsa-cli to bluealsactl (no backward compatibility)
+- renamed bluealsa.conf to org.bluealsa.conf (no backward compatibility)
 
 bluez-alsa v4.3.1 (2024-08-30)
 ==============================
